--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:47:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:47:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith(W) -6
 -4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +8
@@ -159,7 +159,7 @@ Missed Cut</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith(W) -6
 -4 (F)</td>
       <td>Corey Conners -1
@@ -172,26 +172,10 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -9
--1 thru 15</td>
-      <td>Shane Lowry -3
-E thru 16</td>
-      <td>Justin Thomas(W) -1
-E (F)</td>
-      <td>Corey Conners -1
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith -6
 -4 (F)</td>
       <td>Corey Conners -1
@@ -207,7 +191,7 @@ Missed Cut</td>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith -6
 -4 (F)</td>
       <td>Hideki Matsuyama +2
@@ -223,7 +207,7 @@ Missed Cut</td>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith(W) -6
 -4 (F)</td>
       <td>Corey Conners -1
@@ -236,10 +220,26 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-13</td>
+      <td>Scottie Scheffler -9
+-1 thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
+      <td>Justin Thomas(W) -1
+E (F)</td>
+      <td>Corey Conners -1
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith -6
 -4 (F)</td>
       <td>Corey Conners -1
@@ -253,11 +253,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+-1 thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Will Zalatoris +2
@@ -269,11 +269,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -6
 -4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Dustin Johnson(W) +1
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -6
 -4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Will Zalatoris +2
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -6
 -4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Hideki Matsuyama +2
@@ -316,26 +316,10 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -6
--4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
-      <td>Justin Thomas(W) -1
-E (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Rory McIlroy +1
@@ -351,7 +335,7 @@ Missed Cut</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Webb Simpson +2
@@ -380,6 +364,22 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -6
+-4 (F)</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
+      <td>Justin Thomas(W) -1
+E (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +8
++7 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -6
@@ -399,7 +399,7 @@ Missed Cut</td>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Rory McIlroy +1
@@ -431,7 +431,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Will Zalatoris +2
@@ -447,7 +447,7 @@ Missed Cut</td>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith(W) -6
 -4 (F)</td>
       <td>Matthew Fitzpatrick +4
@@ -495,7 +495,7 @@ Missed Cut</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Corey Conners -1
 E (F)</td>
       <td>Viktor Hovland +3
@@ -511,7 +511,7 @@ Missed Cut</td>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler(W) -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Cameron Smith -6
 -4 (F)</td>
       <td>Patrick Cantlay +8
@@ -559,7 +559,7 @@ Missed Cut</td>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Viktor Hovland +3
@@ -604,22 +604,6 @@ E (F)</td>
 +6 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">3</td>
-      <td>Shane Lowry(W) -3
-E thru 16</td>
-      <td>Corey Conners -1
-E (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Joaquin Niemann +4
-+5 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -1
@@ -633,6 +617,22 @@ E (F)</td>
       <td class="greyout leftborder">Tiger Woods +7
 +6 (F)</td>
       <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">4</td>
+      <td>Shane Lowry(W) -2
++1 thru 17</td>
+      <td>Corey Conners -1
+E (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Joaquin Niemann +4
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Brian Harman
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">6</td>
-      <td>Shane Lowry -3
-E thru 16</td>
-      <td>Dustin Johnson(W) +1
-+3 (F)</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td>Matthew Fitzpatrick +4
-+4 (F)</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">7</td>
       <td>Cameron Smith -6
@@ -713,6 +697,22 @@ E (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">7</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
+      <td>Dustin Johnson(W) +1
++3 (F)</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td>Matthew Fitzpatrick +4
++4 (F)</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -799,7 +799,7 @@ Missed Cut</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">14</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
+-1 thru 16</td>
       <td>Dustin Johnson +1
 +3 (F)</td>
       <td>Patrick Cantlay +8
