--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:47:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 6:47:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
--1 thru 15</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+-1 thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Will Zalatoris +2
@@ -157,11 +157,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Cameron Smith -6
 -4 (F)</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Will Zalatoris +2
@@ -169,22 +169,6 @@ E (F)</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
 +4 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 15</td>
-      <td>Shane Lowry -3
-E thru 16</td>
-      <td>Will Zalatoris +2
-+3 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -220,6 +204,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 16</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
+      <td>Will Zalatoris +2
++3 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -4
@@ -237,9 +237,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">2</td>
-      <td>Shane Lowry -3
-E thru 16</td>
+      <td class="bigbold">3</td>
+      <td>Shane Lowry -2
++1 thru 17</td>
       <td>Justin Thomas(W) -1
 E (F)</td>
       <td>Corey Conners -1
