--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 8:25:56 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 8:26:39 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,31 +143,31 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
--1 (F)</td>
+Not started</td>
       <td>Shane Lowry -2
-+1 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
-E (F)</td>
+Not started</td>
       <td>Will Zalatoris +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Tony Finau +4
-+2 (F)</td>
+Not started</td>
       <td class="greyout">Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -6
--4 (F)</td>
+Not started</td>
       <td>Shane Lowry -2
-+1 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
-E (F)</td>
+Not started</td>
       <td>Will Zalatoris +2
-+3 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +4
-+4 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -175,29 +175,29 @@ Missed Cut</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -6
--4 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
-E (F)</td>
+Not started</td>
       <td>Tommy Fleetwood(W) +1
--2 (F)</td>
+Not started</td>
       <td>Rory McIlroy +1
--1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
+Not started</td>
       <td class="greyout">Joaquin Niemann +4
-+5 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -6
--4 (F)</td>
+Not started</td>
       <td>Corey Conners -1
-E (F)</td>
+Not started</td>
       <td>Justin Thomas -1
-E (F)</td>
+Not started</td>
       <td>Viktor Hovland +3
--1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -207,13 +207,13 @@ Missed Cut</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -9
--1 (F)</td>
+Not started</td>
       <td>Shane Lowry -2
-+1 (F)</td>
+Not started</td>
       <td>Will Zalatoris +2
-+3 (F)</td>
+Not started</td>
       <td>Jon Rahm +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -223,15 +223,15 @@ Missed Cut</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -4
--1 (F)</td>
+Not started</td>
       <td>Justin Thomas -1
-E (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Viktor Hovland(W) +3
--1 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -239,29 +239,29 @@ Missed Cut</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">3</td>
       <td>Shane Lowry -2
-+1 (F)</td>
+Not started</td>
       <td>Justin Thomas(W) -1
-E (F)</td>
+Not started</td>
       <td>Corey Conners -1
-E (F)</td>
+Not started</td>
       <td>Jon Rahm +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
       <td class="greyout">Tyrrell Hatton +9
-+7 (F)</td>
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">4</td>
       <td>Cameron Smith(W) -6
--4 (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Rory McIlroy +1
--1 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -271,15 +271,15 @@ Missed Cut</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -1
-E (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Will Zalatoris +2
-+3 (F)</td>
+Not started</td>
       <td>Tony Finau +4
-+2 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Daniel Berger +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -287,13 +287,13 @@ Missed Cut</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas -1
-E (F)</td>
+Not started</td>
       <td>Corey Conners -1
-E (F)</td>
+Not started</td>
       <td>Dustin Johnson +1
-+3 (F)</td>
+Not started</td>
       <td>Russell Henley +7
-+4 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
@@ -303,15 +303,15 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">13</td>
       <td>Corey Conners(W) -1
-E (F)</td>
+Not started</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Robert MacIntyre +6
-+4 (F)</td>
+Not started</td>
       <td>Jon Rahm +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Daniel Berger +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -319,13 +319,13 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">15</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Viktor Hovland(W) +3
--1 (F)</td>
+Not started</td>
       <td>Patrick Reed +4
-+1 (F)</td>
+Not started</td>
       <td>Jon Rahm +7
-+5 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
@@ -335,13 +335,13 @@ Missed Cut</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">20</td>
       <td>Collin Morikawa +1
-+2 (F)</td>
+Not started</td>
       <td>Tony Finau +4
-+2 (F)</td>
+Not started</td>
       <td>Jon Rahm(W) +7
-+5 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -351,13 +351,13 @@ Missed Cut</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">21</td>
       <td>Dustin Johnson +1
-+3 (F)</td>
+Not started</td>
       <td>Viktor Hovland +3
--1 (F)</td>
+Not started</td>
       <td>Jon Rahm +7
-+5 (F)</td>
+Not started</td>
       <td>Patrick Cantlay +8
-+7 (F)</td>
+Not started</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
