--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:42:10 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:42:53 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau +4
 Not started</td>
       <td class="greyout">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -279,7 +279,7 @@ Not started</td>
       <td>Dustin Johnson(W) +1
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -327,7 +327,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -375,7 +375,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -409,7 +409,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +7
 Not started</td>
       <td class="greyout">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -453,7 +453,7 @@ Not started</td>
       <td>Matthew Fitzpatrick +4
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -473,7 +473,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 Not started</td>
       <td class="greyout">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -503,7 +503,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -515,7 +515,7 @@ Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td>Billy Horschel +10
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -581,7 +581,7 @@ Not started</td>
       <td>Will Zalatoris +2
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -759,7 +759,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -775,7 +775,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -803,7 +803,7 @@ Not started</td>
       <td>Dustin Johnson +1
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td>Adam Scott +12
 E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka(W)
@@ -837,7 +837,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td>Patrick Cantlay(W) +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -855,7 +855,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -869,7 +869,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -885,7 +885,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -901,7 +901,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -917,7 +917,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
