--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:42:10 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 10:42:53 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau +4
 Not started</td>
       <td class="greyout">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -231,7 +231,7 @@ Not started</td>
       <td>Viktor Hovland(W) +3
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -247,7 +247,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout">Tyrrell Hatton +10
 +1 thru 1</td>
     </tr>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -341,7 +341,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -357,7 +357,7 @@ Not started</td>
       <td>Jon Rahm +7
 Not started</td>
       <td>Patrick Cantlay +8
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
