--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:00:05 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 11:00:48 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -423,7 +423,7 @@ Not started</td>
       <td>Hideki Matsuyama +2
 Not started</td>
       <td class="greyout leftborder">Tiger Woods +7
-Not started</td>
+E thru 1</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -601,7 +601,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +3
 Not started</td>
       <td class="greyout">Tiger Woods(W) +7
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -615,7 +615,7 @@ Not started</td>
       <td>Viktor Hovland +3
 Not started</td>
       <td class="greyout leftborder">Tiger Woods +7
-Not started</td>
+E thru 1</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -693,7 +693,7 @@ Not started</td>
       <td>Jon Rahm(W) +7
 Not started</td>
       <td>Tiger Woods +7
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
